--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 
 <!-- Google Search Console verification -->
-<meta name="google-site-verification" content="googlef9137b75d79f0e45" />
+<meta name="google-site-verification" content="1lykqw8BoyZp4n6bZdZAPFTkL3Zx9ZgCoBKrzyjCvdg" />
 
 {% include seo.html %}
 
