--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 {% include base_path %}
 
 <meta charset="utf-8">
+<meta name="keywords" content="linguistics, Amazonian languages, Ashaninka, Bora, phonology, Spanish dialects">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Google Search Console verification -->
 <meta name="google-site-verification" content="1lykqw8BoyZp4n6bZdZAPFTkL3Zx9ZgCoBKrzyjCvdg"/>
